Remove all node code. Remove npm config.
From now - ngx only bower dep.

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ngx-runtime",
+  "name": "ngx",
   "version": "0.0.8",
-  "main": "bower/runtime.js",
+  "main": "src/runtime.js",
   "authors": [
     "tuchk4"
   ],
