--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.3.15",
+    "angular-route": "^1.3.15",
     "deep-diff": "^0.3.2",
-    "lodash": "^3.8.0",
-    "log-with-style": "^0.1.5"
+    "lodash": "^3.8.0"
+  },
+  "devDependencies": {
+    "babel": "^5.4.2",
+    "babel-core": "^5.4.2",
+    "chai": "^2.3.0",
+    "expect.js": "^0.3.1"
   }
 }
