--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.8",
   "description": "Helpfull ES6 runtime for angualr",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/index.js --compilers js:babel/register"
   },
   "directories": {
     "lib": "./src"
