--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx",
   "version": "0.0.8",
+  "repository":  "https://github.com/frankland/valent",
   "description": "Helpfull ES6 runtime for angualr",
   "scripts": {
     "test": "mocha test/index.js --compilers js:babel/register"
@@ -27,6 +28,7 @@
     "babel": "^5.4.2",
     "babel-core": "^5.4.2",
     "chai": "^2.3.0",
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "mocha": "^2.2.5"
   }
 }
