--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ngx",
+  "name": "valent",
   "version": "0.0.8",
   "repository":  "https://github.com/frankland/valent",
-  "description": "Helpfull ES6 runtime for angualr",
+  "description": "Helpfull ES6 runtime for angular",
   "scripts": {
     "test": "mocha test/index.js --compilers js:babel/register"
   },
