--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "repository": "https://github.com/frankland/valent",
   "description": "Helpfull ES6 runtime for angular",
   "scripts": {
-    "test": "mocha test/index.js --compilers js:babel/register"
+    "test": "mocha test/index.js --compilers js:babel/register",
+    "prepublish": "./node_modules/.bin/rimraf ./src-native && ./node_modules/.bin/babel -d ./src-native ./src"
   },
   "directories": {
     "lib": "./src"
@@ -29,6 +30,7 @@
     "babel-core": "^5.4.2",
     "chai": "^2.3.0",
     "expect.js": "^0.3.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "rimraf": "^2.4.0"
   }
 }
