--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "mocha test/index.js --compilers js:babel/register"
   },
-  "directories": {
-    "lib": "./src"
-  },
-  "main": "./src/index.js",
+  "main": "./index.js",
   "keywords": [
     "angular",
     "es6",
