--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Helpfull ES6 runtime for angular",
   "scripts": {
     "test": "mocha test/index.js --compilers js:babel/register",
-    "prepublish": "./node_modules/.bin/babel -d ./ ./src"
+    "prepublish": "./node_modules/.bin/babel --stage=0 -d ./ ./src"
   },
-  "main": "./index.js",
+  "main": "./valent.js",
   "keywords": [
     "angular",
     "es6",
