--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Helpfull ES6 runtime for angular",
   "scripts": {
     "test": "mocha test/index.js --compilers js:babel/register",
-    "prepublish": "./node_modules/.bin/babel --stage=0 -d ./ ./src"
+    "prepublish": "./node_modules/.bin/babel --stage=0 -d ./ ./src",
+    "dev": "./node_modules/.bin/babel -d ./ ./src --watch"
   },
   "main": "./valent.js",
   "keywords": [
@@ -17,6 +18,10 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "deep-diff": "^0.3.2",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
@@ -25,8 +30,6 @@
     "url-pattern": "^0.10.0"
   },
   "devDependencies": {
-    "babel": "^5.4.2",
-    "babel-core": "^5.4.2",
     "chai": "^2.3.0",
     "expect.js": "^0.3.1",
     "mocha": "^2.2.5",
