--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "repository": "https://github.com/frankland/valent",
   "description": "Helpfull ES6 runtime for angular",
   "scripts": {
-    "test": "mocha test/index.js --compilers js:babel/register",
+    "test": "mocha test/index.js --compilers js:babel-core/register",
     "prepublish": "./node_modules/.bin/babel --stage=0 -d ./ ./src",
-    "dev": "./node_modules/.bin/babel -d ./ ./src --watch"
+    "dev": "./node_modules/.bin/babel -d ./ ./src --watch",
+    "format": "prettier --trailing-comma es5 --single-quote --write './src/**/*.js' './test/**/*.js'",
+    "precommit": "lint-staged"
   },
   "main": "./valent.js",
   "keywords": [
@@ -18,21 +20,29 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "deep-diff": "^0.3.2",
-    "lodash": "^3.8.0",
-    "moment": "^2.10.3",
-    "tcomb": "^2.0.0-beta",
-    "tcomb-validation": "^2.2.0",
-    "url-pattern": "^0.10.0"
+    "deep-diff": "^0.3.8",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "tcomb": "^3.2.20",
+    "tcomb-validation": "^3.3.0",
+    "url-pattern": "^1.0.3"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.0.2",
     "expect.js": "^0.3.1",
-    "mocha": "^2.2.5",
-    "rimraf": "^2.4.0"
+    "husky": "^0.13.4",
+    "lint-staged": "^3.6.1",
+    "mocha": "^3.4.2",
+    "prettier": "^1.4.4",
+    "rimraf": "^2.6.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --trailing-comma es5 --single-quote --write",
+      "git add"
+    ]
   }
 }
